@@ -60,7 +60,7 @@ public class VColorImageSelector extends JPanel
     private int idNum = 0;
     
     private final static Object[][] m_attributes = {
-        {new Integer(SHOW),     "Show condition:"},
+        {Integer.valueOf(SHOW),     "Show condition:"},
     };
 
     public VColorImageSelector(SessionShare sshare, ButtonIF vif, String typ) {
